# sueca

./: .gitignore  Cargo.toml  README.md  netlify.toml
backend/: Cargo.toml
backend/src/: main.rs  state.rs
backend/src/extractors/: auth.rs
backend/src/routes/: game.rs  user.rs
backend/src/services/: database_service.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  index.html  leptosfmt.toml  tailwind.config.js
frontend/src/: config.rs  main.rs  storage.rs
frontend/src/components/: join_room_button.rs  mod.rs  req_button.rs
frontend/src/pages/: game.rs  lobby.rs  login.rs  mod.rs
