[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = {version = "1.52.1", features = ["full"]}
tower = "0.5.3"
mongodb = "3.5.2"
serde = "1.0.228"
futures = "0.3.32"
dotenvy = "0.15.7"
common = {path = "../common"}
async-trait = "0.1.89"
tower-http = { version = "0.6.10", features = ["cors"] }
