[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo = {version = "0.12.0", features = ["net", "timers"]}
common = {path = "../common"}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wasm-bindgen-futures = "0.4.71"
web-sys = { version = "0.3.98", features = ["HtmlInputElement", "Window", "Storage"] }
yew = { version = "0.23",  features = ["csr"] }
yew-router = "0.20.0"
